# GameServer

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml
GameServer/x64/Debug/: GameServer.exe.recipe  GameServer.ilk  vc143.idb
GameServer/x64/Debug/GameServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GameServer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/: GameConfig.h  GameServer.cpp  GameServer.h  main.cpp
src/Game/: FoodController.cpp  FoodController.h  GameServer.cpp  GameServer.h  GameState.cpp  GameState.h  MapController.cpp  MapController.h  MovementHandler.cpp  MovementHandler.h  Player.cpp  Player.h
src/Game/Config/: GameConfig.h
src/Game/Core/: GameLoop.cpp  GameLoop.h  GameServer.cpp  GameServer.h  GameState.cpp  GameState.h
src/Game/Entities/: Food.cpp  Food.h  GridCell.cpp  Player.cpp  Player.h
src/Game/Networking/: ConnectionManager.cpp  ConnectionManager.h  TcpServer.cpp  TcpServer.h  UdpServer.cpp  UdpServer.h
src/Game/Networking/Messages/: GameMessage.cpp  GameMessage.h  MessageHandler.cpp  MessageHandler.h
src/Game/Systems/: CollisionSystem.cpp  CollisionSystem.h  FoodController.cpp  FoodController.h  MapController.cpp  MovementHandler.cpp  MovementHandler.h  PlayerSystem.cpp  PlayerSystem.h
src/Server/: ClientUdpMessage.cpp  ClientUdpMessage.h  MessageType.h  TcpServer.cpp  TcpServer.h  UdpServer.cpp  UdpServer.h
src/Utils/: Logger.cpp  Logger.h  Logger.inl  Time.cpp  Time.h
